# message_memory

./: .coverage  .env.example  .gitignore  .railwayignore  DEPLOYMENT.md  Procfile  README.md  SETUP_CHECKLIST.md  backfill_memory.py  check_job.py  check_schema.py  inspect_job.py  main.py  nixpacks.toml  pyproject.toml  pytest.ini  railpack.json  railway.json  run_retry.sh  run_scheduler.sh  run_worker.sh  test_document_flow.py  test_link_preview.py  test_pdf_extractor.py  test_presence.py  verify_llm_structure.py
.claude/: CLAUDE.md
app/: main.py  models.py  models_transcription.py
migrations/: 001_create_processing_jobs_table.sql  001_initial_schema_updates.sql  002_add_processing_jobs_indexes.sql  004_message_timestamp.sql  005_add_link_preview_message_type.sql  006_remove_session_id.sql
prompts/: __init__.py  image_parsing.py  pdf_parsing.py  persona_learning.py  session_detection.py
scripts/: check_user_data.py  debug_memory_extraction.py  test_classification.py  test_classification_edge_cases.py  test_memory_api.py  test_query_variations.py
tests/: conftest.py
tests/fixtures/: real_persona.json
tests/integration/: .env.example  conftest.py  test_document_flow.py  test_openai_api.py  test_whapi_api.py
tests/unit/: test_batching.py  test_jobs.py  test_jobs_reliability.py  test_n8n_error_webhook.py  (+8 more)
utils/: config.py  llm.py  supabase_client.py  whapi_messaging.py
workers/: batching.py  database.py  jobs.py  logging_config.py  media.py  n8n_forwarder.py  presence.py  retry_pending.py  session.py  transcription.py  transcription_elevenlabs.py
